# cpp_examples

./: CMakeLists.txt  FunctionsUsage.cpp  FunctionsUsage.h  LambdasAndContainers.cpp  LambdasAndContainers.h  TestProject.pro  TestProject.pro.user.81bf2f7  main.cpp
TestProject.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
TestProject.xcodeproj/project.xcworkspace/xcuserdata/alekseikanash.xcuserdatad/: UserInterfaceState.xcuserstate
TestProject.xcodeproj/xcuserdata/alekseikanash.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
TestProject.xcodeproj/xcuserdata/alekseikanash.xcuserdatad/xcschemes/: TestProject.xcscheme  xcschememanagement.plist
